--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Does various stuff in reaction to HTTP requests sent locally. Works mostly with supibot (supinic/supibot) and its LocalRequest module.",
   "main": "listener.js",
   "scripts": {
+	"start": "node listener.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
